# ILATSPIDK

./: .gitignore  CMakeLists.txt  README.org  launch.json  run.py
documents/: todo.org  tools.org
release/: build.bat
shaders/: text.frag.hlsl
source/: animation.cpp  animation.h  audio.cpp  audio.h  audio_data.h  button.cpp  button.h  card_data.h  character_animation.cpp  character_animation.h  collider_data.h  combat.cpp  combat.h  combat_ui.cpp  combat_ui.h  dialog.cpp  dialog.h  dialog_data.h  dialog_impl.cpp  dialog_structures.cpp  dialog_structures.h  dsp.h  fixed_list.h  font_data.h  font_structures.h  game.cpp  game.h  image_assets.h  image_data.h  image_structures.h  image_utils.h  input.cpp  input.h  interaction.cpp  interaction.h  kerry_anim_controller.cpp  kerry_anim_controller.h  main.cpp  main_menu.cpp  main_menu.h  (+21 more)
src/: animation.cpp  animation.h  audio.cpp  button.cpp  button.h  collider_data.h  game.cpp  game.h  game_assets.h  game_audio.cpp  game_audio.h  game_input.cpp  game_input.h  game_render.cpp  game_render.h  image_asset_structures.h  image_assets.h  input.cpp  input.h  interaction.cpp  interaction.h  kerry_anim_controller.cpp  kerry_anim_controller.h  main.cpp  physics.cpp  physics.h  platform_render.cpp  platform_render.h  player_movement_controller.cpp  player_movement_controller.h  render.cpp  render.h  vector2.cpp  vector2.h
tools/: compile_shaders.py  compress_images.py  cpp_utils.py  export_aseprite.py  generate_colliders.py  import_assets.py  import_audio.py  import_dialog.py  import_font.py  import_images.py  import_positions.py  (+1 more)
